Fix sidebar on small screens

--- a/public/theme.css
+++ b/public/theme.css
@@ -20,3 +20,12 @@ body {
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+
+@media (min-width: 544px) {
+  .sidebar-sm {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+  }
+}
